
plugins {
    id 'java'
	id 'maven-publish'
//	id 'jacoco'
}

java {
	withJavadocJar()
	withSourcesJar()
}

//jacoco {
//	toolVersion = '0.8.7-SNAPSHOT'
//}

javadoc.options {
	addBooleanOption('-enable-preview', true)
	addStringOption('-release', '15')
}

publishing {
	publications {
		stat(MavenPublication) {
			from components.java
		}
	}

	repositories {
		if (project.hasProperty('maven_local_repo')) {
		maven {
			url maven_local_repo
		}
		}	 else {
		mavenLocal()
		}
	}
}

repositories {
	if (project.hasProperty('maven_local_repo')) {
	    maven {
			url maven_local_repo
		} 
	} else {
		mavenLocal()
	}
	if (System.env.NEXUS_REPO_ALL_URL) {
		maven {
			credentials {
				username System.env.NEXUS_USER
				password System.env.NEXUS_PASSWORD
			}
			url = uri(System.env.NEXUS_REPO_ALL_URL)
		}
	} else {
		maven {
			url = uri('https://repo.maven.apache.org/maven2/')
		}
		maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
	}
}

dependencies {
    implementation 'io.github.feklwi:dine:1.0.0-SNAPSHOT'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

group = 'de.fekl'
version = '1.0.0-SNAPSHOT'
description = 'start'
java.sourceCompatibility = JavaVersion.VERSION_15

compileJava {
    options.compilerArgs += ['--enable-preview']
}
compileTestJava {
	options.compilerArgs += ['--enable-preview']
}
test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}
